fix slider styling, expand/collapse

--- a/demo-seed/app/app.css
+++ b/demo-seed/app/app.css
@@ -149,3 +149,23 @@ body {
 	width:175px;
 	margin-top:19px;
 }
+
+rzslider .rz-pointer {
+	background-color: #585858;
+	width : 20px;
+	height : 20px;
+	top : -8px;
+}
+
+rzslider .rz-pointer:after {
+	top : 6px;
+	left: 6px;
+}
+
+rzslider .rz-pointer.rz-active:after {
+	background-color: #ccc;
+}
+
+rzslider .rz-bar.rz-selection {
+  	background: #585858;
+ }
